--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                                 alt="" class="header__notify-img">
                                             <div class="header__notify-info">
                                                 <span class="header__notify-name">Mỹ phẩm OIO chính hãng đã xác nhận đơn
-                                                    hàng của bạn hãy theo dõi đơn hàng trong thời gian sớm nhất</span>
+                                                    hàng của bạn hãy theo dõi đơn hàng trong thời gian sớm nhất và cập nhật thông tin</span>
                                                 <span class="header__notify-descriotion">Mô tả mỹ phẩm chính hãng vào
                                                     lúc 11:00pm
                                                 </span>
@@ -1062,7 +1062,7 @@
                                 <a href="" class="footer-item__link">Trung tâm trợ giúp</a>
                             </li>
                             <li class="footer-item">
-                                <a href="" class="footer-item__link">DD Shop Mall</a>
+                                <a href="" class="footer-item__link">DD Shop Mall </a>
                             </li>
                             <li class="footer-item">
                                 <a href="" class="footer-item__link">Hướng dẫn mua hàng</a>
