--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
     <link rel="stylesheet" href="./asset/fonts/fontawesome-free-6.2.0-web/css/all.min.css">
     <link rel="stylesheet" href="./asset/css/base.css">
     <link rel="stylesheet" href="./asset/css/main.css">
+    <link rel="stylesheet" href="./asset/css/grid.css">
+    <link rel="stylesheet" href="./asset/css/responsive.css">
 </head>
 
 <body>
     <div class="app">
         <header class="header">
-            <div class="grid">
-                <nav class="header__navbar">
+            <div class="grid wide">
+                <nav class="header__navbar hide-on-mobile-tablet">
                     <ul class="header__navbar-list">
                         <li class="header__navbar-item header__navbar-item--has-qr header__navbar-item--separate">
                             Vào cửa hàng trên ứng dụng DD
@@ -139,7 +141,7 @@
 
                 <!-- header with sreach -->
                 <div class="header-with-sreach">
-                    <div class="header__logo header__logo-link">
+                    <div class="header__logo header__logo-link hide-on-tablet">
                         <a href="index.html">
                             <svg viewBox="0 0 192 65" class="header__logo-img">
                                 <g fill-rule="evenodd">
@@ -406,7 +408,7 @@
 
         </header>
         <div class="app__container">
-            <div class="grid">
+            <div class="grid wide">
                 <div class="grid__row app-content">
                     <div class="grid__colum-2">
                         <nav class="category">
@@ -429,7 +431,7 @@
                         </nav>
                     </div>
                     <div class="grid__colum-10">
-                        <div class="home-filter">
+                        <div class="home-filter hide-on-mobile-tablet">
                             <span class="home-filter__label">
                                 Sắp xếp theo
                             </span>
@@ -1051,7 +1053,7 @@
 
         </div>
         <footer class="footer">
-            <div class="grid">
+            <div class="grid wide">
                 <div class="grid__row">
                     <div class="grid__colum-2-4">
                         <h3 class="footer__heading">
@@ -1154,7 +1156,7 @@
                     </div>
                 </div>
             </div>
-            <div class="grid">
+            <div class="grid wide">
 
                 <div class="footer__bottom">
                     <p class="footer__text">© 2022 - Bản quyền thuộc về DD</p>
