cap nhat mobile

--- a/index.html
+++ b/index.html
@@ -429,8 +429,9 @@
       
         <div class="app__container">
             <div class="grid wide">
-                <div class="grid__row app-content">
-                    <div class="grid__colum-2">
+                <div class="row sm-gutter app-content">
+                    <div class="col l-2 m-0 c-0">
+                        <!-- category -->
                         <nav class="category">
 
                             <h3 class="category__heading">
@@ -450,7 +451,7 @@
                             </ul>
                         </nav>
                     </div>
-                    <div class="grid__colum-10">
+                    <div class="col l-10 m-12 c-12">
                         <div class="home-filter hide-on-mobile-tablet">
                             <span class="home-filter__label">
                                 Sắp xếp theo
@@ -487,10 +488,52 @@
                                 </div>
                             </div>
                         </div>
+
+                        <nav class="mobile-category">
+                            <ul class="mobile-category__list"> 
+                                <li class="mobile-category__item">
+                                    <a href="" class="mobile-category__link">Đồ trang điểm và lọ kem bba dành cho nữ</a>
+                                </li>
+                                <li class="mobile-category__item">
+                                    <a href="" class="mobile-category__link">Đồ trang điểm</a>
+                                </li>
+                                <li class="mobile-category__item">
+                                    <a href="" class="mobile-category__link">Đồ trang điểm</a>
+                                </li>
+                                <li class="mobile-category__item">
+                                    <a href="" class="mobile-category__link">Đồ trang điểm</a>
+                                </li>
+                                <li class="mobile-category__item">
+                                    <a href="" class="mobile-category__link">Đồ trang điểm</a>
+                                </li>
+                                <li class="mobile-category__item">
+                                    <a href="" class="mobile-category__link">Đồ trang điểm</a>
+                                </li>
+                                <li class="mobile-category__item">
+                                    <a href="" class="mobile-category__link">Đồ trang điểm</a>
+                                </li>
+                                <li class="mobile-category__item">
+                                    <a href="" class="mobile-category__link">Đồ trang điểm</a>
+                                </li>
+                                <li class="mobile-category__item">
+                                    <a href="" class="mobile-category__link">Đồ trang điểm</a>
+                                </li>
+                                <li class="mobile-category__item">
+                                    <a href="" class="mobile-category__link">Đồ trang điểm</a>
+                                </li>
+                                <li class="mobile-category__item">
+                                    <a href="" class="mobile-category__link">Đồ trang điểm</a>
+                                </li>
+                                <li class="mobile-category__item">
+                                    <a href="" class="mobile-category__link">Đồ trang điểm</a>
+                                </li>
+                            </ul>
+                        </nav>
+
                         <div class="home-product">
-                            <div class="grid__row">
+                            <div class="row sm-gutter">
                                 <!-- product0-item -->
-                                <div class="grid__colum-2-4">
+                                <div class="col l-2-4 m-4 c-6">
                                     <a class="home-product-item" href="#">
                                         <div class="home-product-item__img"
                                             style="background-image: url('./asset/img/my-pham-maybelline-fit-me-foundation.jpg');">
@@ -542,7 +585,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="grid__colum-2-4">
+                                <div class="col l-2-4 m-4 c-6">
                                     <a class="home-product-item" href="#">
                                         <div class="home-product-item__img"
                                             style="background-image: url('./asset/img/my-pham-maybelline-fit-me-foundation.jpg');">
@@ -594,7 +637,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="grid__colum-2-4">
+                                <div class="col l-2-4 m-4 c-6">
                                     <a class="home-product-item" href="#">
                                         <div class="home-product-item__img"
                                             style="background-image: url('./asset/img/my-pham-maybelline-fit-me-foundation.jpg');">
@@ -646,7 +689,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="grid__colum-2-4">
+                                <div class="col l-2-4 m-4 c-6">
                                     <a class="home-product-item" href="#">
                                         <div class="home-product-item__img"
                                             style="background-image: url('./asset/img/my-pham-maybelline-fit-me-foundation.jpg');">
@@ -698,7 +741,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="grid__colum-2-4">
+                                <div class="col l-2-4 m-4 c-6">
                                     <a class="home-product-item" href="#">
                                         <div class="home-product-item__img"
                                             style="background-image: url('./asset/img/my-pham-maybelline-fit-me-foundation.jpg');">
@@ -750,7 +793,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="grid__colum-2-4">
+                                <div class="col l-2-4 m-4 c-6">
                                     <a class="home-product-item" href="#">
                                         <div class="home-product-item__img"
                                             style="background-image: url('./asset/img/my-pham-maybelline-fit-me-foundation.jpg');">
@@ -802,7 +845,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="grid__colum-2-4">
+                                <div class="col l-2-4 m-4 c-6">
                                     <a class="home-product-item" href="#">
                                         <div class="home-product-item__img"
                                             style="background-image: url('./asset/img/my-pham-maybelline-fit-me-foundation.jpg');">
@@ -854,7 +897,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="grid__colum-2-4">
+                                <div class="col l-2-4 m-4 c-6">
                                     <a class="home-product-item" href="#">
                                         <div class="home-product-item__img"
                                             style="background-image: url('./asset/img/my-pham-maybelline-fit-me-foundation.jpg');">
@@ -906,7 +949,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="grid__colum-2-4">
+                                <div class="col l-2-4 m-4 c-6">
                                     <a class="home-product-item" href="#">
                                         <div class="home-product-item__img"
                                             style="background-image: url('./asset/img/my-pham-maybelline-fit-me-foundation.jpg');">
@@ -958,7 +1001,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="grid__colum-2-4">
+                                <div class="col l-2-4 m-4 c-6">
                                     <a class="home-product-item" href="#">
                                         <div class="home-product-item__img"
                                             style="background-image: url('./asset/img/my-pham-maybelline-fit-me-foundation.jpg');">
@@ -1074,8 +1117,8 @@
         </div>
         <footer class="footer">
             <div class="grid wide">
-                <div class="grid__row">
-                    <div class="grid__colum-2-4">
+                <div class="row">
+                    <div class="col l-2-4 m-4 c-6">
                         <h3 class="footer__heading">
                             Chăm sóc khách hàng
                         </h3>
@@ -1091,7 +1134,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="grid__colum-2-4">
+                    <div class="col l-2-4 m-4 c-6">
                         <h3 class="footer__heading">
                             Giới thiệu
                         </h3>
@@ -1109,7 +1152,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="grid__colum-2-4">
+                    <div class="col l-2-4 m-4 c-6">
                         <h3 class="footer__heading">
                             Danh mục
                         </h3>
@@ -1127,7 +1170,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="grid__colum-2-4">
+                    <div class="col l-2-4 m-4 c-6">
                         <h3 class="footer__heading">
                             Theo dõi
                         </h3>
@@ -1154,7 +1197,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="grid__colum-2-4">
+                    <div class="col l-2-4 m-4 c-6">
 
                         <h3 class="footer__heading">
                             Vào cửa hàng trên ứng dụng
