cap nhat mobile next

--- a/index.html
+++ b/index.html
@@ -492,40 +492,40 @@
                         <nav class="mobile-category">
                             <ul class="mobile-category__list"> 
                                 <li class="mobile-category__item">
-                                    <a href="" class="mobile-category__link">Đồ trang điểm và lọ kem bba dành cho nữ</a>
+                                    <button  class="mobile-category__link">Đồ trang điểm và lọ kem bba dành cho nữ</button>
                                 </li>
                                 <li class="mobile-category__item">
-                                    <a href="" class="mobile-category__link">Đồ trang điểm</a>
+                                    <button  class="mobile-category__link">Đồ trang điểm</button>
                                 </li>
                                 <li class="mobile-category__item">
-                                    <a href="" class="mobile-category__link">Đồ trang điểm</a>
+                                    <button  class="mobile-category__link">Đồ trang điểm</button>
                                 </li>
                                 <li class="mobile-category__item">
-                                    <a href="" class="mobile-category__link">Đồ trang điểm</a>
+                                    <button  class="mobile-category__link">Đồ trang điểm</button>
                                 </li>
                                 <li class="mobile-category__item">
-                                    <a href="" class="mobile-category__link">Đồ trang điểm</a>
+                                    <button  class="mobile-category__link">Đồ trang điểm</button>
                                 </li>
                                 <li class="mobile-category__item">
-                                    <a href="" class="mobile-category__link">Đồ trang điểm</a>
+                                    <button  class="mobile-category__link">Đồ trang điểm</button>
                                 </li>
                                 <li class="mobile-category__item">
-                                    <a href="" class="mobile-category__link">Đồ trang điểm</a>
+                                    <button  class="mobile-category__link">Đồ trang điểm</button>
                                 </li>
                                 <li class="mobile-category__item">
-                                    <a href="" class="mobile-category__link">Đồ trang điểm</a>
+                                    <button  class="mobile-category__link">Đồ trang điểm</button>
                                 </li>
                                 <li class="mobile-category__item">
-                                    <a href="" class="mobile-category__link">Đồ trang điểm</a>
+                                    <button  class="mobile-category__link">Đồ trang điểm</button>
                                 </li>
                                 <li class="mobile-category__item">
-                                    <a href="" class="mobile-category__link">Đồ trang điểm</a>
+                                    <button  class="mobile-category__link">Đồ trang điểm</button>
                                 </li>
                                 <li class="mobile-category__item">
-                                    <a href="" class="mobile-category__link">Đồ trang điểm</a>
+                                    <button  class="mobile-category__link">Đồ trang điểm</button>
                                 </li>
                                 <li class="mobile-category__item">
-                                    <a href="" class="mobile-category__link">Đồ trang điểm</a>
+                                    <button  class="mobile-category__link">Đồ trang điểm</button>
                                 </li>
                             </ul>
                         </nav>
