--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                     <a href="" class="header__sort-link">Liên quan</a>
                 </li>
                 <li class="header__sort-item header__sort-link--active">
-                    <a href="" class="header__sort-link ">Mới nhất</a>
+                    <a href="" class="header__sort-link header__sort-border">Mới nhất</a>
                 </li>
                 <li class="header__sort-item">
                     <a href="" class="header__sort-link">Bán chạy</a>
@@ -1116,7 +1116,7 @@
 
         </div>
         <footer class="footer">
-            <div class="grid wide">
+            <div class="grid wide footer__content-mobile">
                 <div class="row">
                     <div class="col l-2-4 m-4 c-6">
                         <h3 class="footer__heading">
@@ -1197,7 +1197,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col l-2-4 m-4 c-6">
+                    <div class="col l-2-4 m-8 c-12">
 
                         <h3 class="footer__heading">
                             Vào cửa hàng trên ứng dụng
